--- a/SDK/AC710N.cbp
+++ b/SDK/AC710N.cbp
@@ -86,6 +86,22 @@
 <Add option="-DCONFIG_LINK_DISTURB_SCAN_ENABLE=0" />
 <Add option="-DCONFIG_UPDATA_ENABLE" />
 <Add option="-DCONFIG_OTA_UPDATA_ENABLE" />
+<Add option="-DEXPORT_PLATFORM_ICSD_ENABLE=1" />
+<Add option="-DEXPORT_PLATFORM_AUDIO_SMART_VOICE_ENABLE=1" />
+<Add option="-DEXPORT_PLATFORM_AUDIO_PDM_ENABLE=1" />
+<Add option="-DEXPORT_PLATFORM_AUDIO_ALINK_ENABLE=1" />
+<Add option="-DEXPORT_PLATFORM_AUDIO_TDM_ENABLE=0" />
+<Add option="-DEXPORT_PLATFORM_AUDIO_SPDIF_ENABLE=0" />
+<Add option="-DEXPORT_PLATFORM_AUDIO_FM_ENABLE=0" />
+<Add option="-DEXPORT_PLATFORM_AUDIO_WM8978_ENABLE=0" />
+<Add option="-DEXPORT_PLATFORM_AUDIO_UART_SENDER_ENABLE=1" />
+<Add option="-DEXPORT_PLATFORM_AUDIO_SPATIAL_EFFECT_ENABLE=1" />
+<Add option="-DEXPORT_PLATFORM_AUDIO_EFFECT_DEMO_ENABLE=1" />
+<Add option="-DEXPORT_SOMATOSENSORY_ENABLE=1" />
+<Add option="-DEXPORT_PLATFORM_ANC_ENABLE=1" />
+<Add option="-DEXPORT_PLATFORM_HW_MATH_VERSION=2" />
+<Add option="-DEXPORT_LE_AUDIO_SUPPORT=0" />
+<Add option="-DEXPORT_PLATFORM_AUDIO_MIDI_ENABLE=0" />
 <Add directory="interface" />
 <Add directory="interface/driver" />
 <Add directory="interface/driver/device" />
@@ -393,13 +409,11 @@
 <Add library="C:\JL\pi32\pi32v2-lib\r3\libm.a" />
 </Linker>
 <ExtraCommands>
-<Add before="$compiler $options $includes -DEXPORT_PLATFORM_AUDIO_UART_SENDER_ENABLE=1 -DEXPORT_PLATFORM_HW_MATH_VERSION=2 -DEXPORT_PLATFORM_AUDIO_ALINK_ENABLE=1 -DEXPORT_PLATFORM_AUDIO_MIDI_ENABLE=0 -DEXPORT_PLATFORM_AUDIO_PDM_ENABLE=1 -DEXPORT_PLATFORM_AUDIO_WM8978_ENABLE=0 -DEXPORT_PLATFORM_AUDIO_SPDIF_ENABLE=0 -D__LD__ -DEXPORT_PLATFORM_AUDIO_FM_ENABLE=0 -DEXPORT_PLATFORM_ANC_ENABLE=1 -DEXPORT_PLATFORM_AUDIO_SPATIAL_EFFECT_ENABLE=1 -DEXPORT_PLATFORM_AUDIO_SMART_VOICE_ENABLE=1 -DEXPORT_PLATFORM_AUDIO_EFFECT_DEMO_ENABLE=1 -DEXPORT_PLATFORM_ICSD_ENABLE=1 -DEXPORT_LE_AUDIO_SUPPORT=0 -DEXPORT_PLATFORM_AUDIO_TDM_ENABLE=0 -DEXPORT_SOMATOSENSORY_ENABLE=1 -E -P build\genFileList.c -o build\fileList.dumy" />
-<Add before="$compiler $options $includes -DEXPORT_PLATFORM_AUDIO_UART_SENDER_ENABLE=1 -DEXPORT_PLATFORM_HW_MATH_VERSION=2 -DEXPORT_PLATFORM_AUDIO_ALINK_ENABLE=1 -DEXPORT_PLATFORM_AUDIO_MIDI_ENABLE=0 -DEXPORT_PLATFORM_AUDIO_PDM_ENABLE=1 -DEXPORT_PLATFORM_AUDIO_WM8978_ENABLE=0 -DEXPORT_PLATFORM_AUDIO_SPDIF_ENABLE=0 -D__LD__ -DEXPORT_PLATFORM_AUDIO_FM_ENABLE=0 -DEXPORT_PLATFORM_ANC_ENABLE=1 -DEXPORT_PLATFORM_AUDIO_SPATIAL_EFFECT_ENABLE=1 -DEXPORT_PLATFORM_AUDIO_SMART_VOICE_ENABLE=1 -DEXPORT_PLATFORM_AUDIO_EFFECT_DEMO_ENABLE=1 -DEXPORT_PLATFORM_ICSD_ENABLE=1 -DEXPORT_LE_AUDIO_SUPPORT=0 -DEXPORT_PLATFORM_AUDIO_TDM_ENABLE=0 -DEXPORT_SOMATOSENSORY_ENABLE=1 -E -P build\fileList.c -o build\fileList.mk" />
-<Add before="$compiler $options $includes -DEXPORT_PLATFORM_AUDIO_UART_SENDER_ENABLE=1 -DEXPORT_PLATFORM_HW_MATH_VERSION=2 -DEXPORT_PLATFORM_AUDIO_ALINK_ENABLE=1 -DEXPORT_PLATFORM_AUDIO_MIDI_ENABLE=0 -DEXPORT_PLATFORM_AUDIO_PDM_ENABLE=1 -DEXPORT_PLATFORM_AUDIO_WM8978_ENABLE=0 -DEXPORT_PLATFORM_AUDIO_SPDIF_ENABLE=0 -D__LD__ -DEXPORT_PLATFORM_AUDIO_FM_ENABLE=0 -DEXPORT_PLATFORM_ANC_ENABLE=1 -DEXPORT_PLATFORM_AUDIO_SPATIAL_EFFECT_ENABLE=1 -DEXPORT_PLATFORM_AUDIO_SMART_VOICE_ENABLE=1 -DEXPORT_PLATFORM_AUDIO_EFFECT_DEMO_ENABLE=1 -DEXPORT_PLATFORM_ICSD_ENABLE=1 -DEXPORT_LE_AUDIO_SUPPORT=0 -DEXPORT_PLATFORM_AUDIO_TDM_ENABLE=0 -DEXPORT_SOMATOSENSORY_ENABLE=1 -E -P apps\earphone\sdk_used_list.c -o apps\earphone\sdk_used_list.used" />
-<Add before="$compiler $options $includes -DEXPORT_PLATFORM_AUDIO_UART_SENDER_ENABLE=1 -DEXPORT_PLATFORM_HW_MATH_VERSION=2 -DEXPORT_PLATFORM_AUDIO_ALINK_ENABLE=1 -DEXPORT_PLATFORM_AUDIO_MIDI_ENABLE=0 -DEXPORT_PLATFORM_AUDIO_PDM_ENABLE=1 -DEXPORT_PLATFORM_AUDIO_WM8978_ENABLE=0 -DEXPORT_PLATFORM_AUDIO_SPDIF_ENABLE=0 -D__LD__ -DEXPORT_PLATFORM_AUDIO_FM_ENABLE=0 -DEXPORT_PLATFORM_ANC_ENABLE=1 -DEXPORT_PLATFORM_AUDIO_SPATIAL_EFFECT_ENABLE=1 -DEXPORT_PLATFORM_AUDIO_SMART_VOICE_ENABLE=1 -DEXPORT_PLATFORM_AUDIO_EFFECT_DEMO_ENABLE=1 -DEXPORT_PLATFORM_ICSD_ENABLE=1 -DEXPORT_LE_AUDIO_SUPPORT=0 -DEXPORT_PLATFORM_AUDIO_TDM_ENABLE=0 -DEXPORT_SOMATOSENSORY_ENABLE=1 -E -P cpu\br56\sdk_ld.c -o cpu\br56\sdk.ld" />
-<Add before="$compiler $options $includes -DEXPORT_PLATFORM_AUDIO_UART_SENDER_ENABLE=1 -DEXPORT_PLATFORM_HW_MATH_VERSION=2 -DEXPORT_PLATFORM_AUDIO_ALINK_ENABLE=1 -DEXPORT_PLATFORM_AUDIO_MIDI_ENABLE=0 -DEXPORT_PLATFORM_AUDIO_PDM_ENABLE=1 -DEXPORT_PLATFORM_AUDIO_WM8978_ENABLE=0 -DEXPORT_PLATFORM_AUDIO_SPDIF_ENABLE=0 -D__LD__ -DEXPORT_PLATFORM_AUDIO_FM_ENABLE=0 -DEXPORT_PLATFORM_ANC_ENABLE=1 -DEXPORT_PLATFORM_AUDIO_SPATIAL_EFFECT_ENABLE=1 -DEXPORT_PLATFORM_AUDIO_SMART_VOICE_ENABLE=1 -DEXPORT_PLATFORM_AUDIO_EFFECT_DEMO_ENABLE=1 -DEXPORT_PLATFORM_ICSD_ENABLE=1 -DEXPORT_LE_AUDIO_SUPPORT=0 -DEXPORT_PLATFORM_AUDIO_TDM_ENABLE=0 -DEXPORT_SOMATOSENSORY_ENABLE=1 -E -P cpu\br56\tools\download.c -o cpu\br56\tools\download.bat" />
+<Add before="$compiler $options $includes -D__LD__ -E -P apps\earphone\sdk_used_list.c -o apps\earphone\sdk_used_list.used" />
+<Add before="$compiler $options $includes -D__LD__ -E -P cpu\br56\sdk_ld.c -o cpu\br56\sdk.ld" />
+<Add before="$compiler $options $includes -D__LD__ -E -P cpu\br56\tools\download.c -o cpu\br56\tools\download.bat" />
 <Add before="tools\utils\fixbat.exe cpu\br56\tools\download.bat" />
-<Add before="$compiler $options $includes -DEXPORT_PLATFORM_AUDIO_UART_SENDER_ENABLE=1 -DEXPORT_PLATFORM_HW_MATH_VERSION=2 -DEXPORT_PLATFORM_AUDIO_ALINK_ENABLE=1 -DEXPORT_PLATFORM_AUDIO_MIDI_ENABLE=0 -DEXPORT_PLATFORM_AUDIO_PDM_ENABLE=1 -DEXPORT_PLATFORM_AUDIO_WM8978_ENABLE=0 -DEXPORT_PLATFORM_AUDIO_SPDIF_ENABLE=0 -D__LD__ -DEXPORT_PLATFORM_AUDIO_FM_ENABLE=0 -DEXPORT_PLATFORM_ANC_ENABLE=1 -DEXPORT_PLATFORM_AUDIO_SPATIAL_EFFECT_ENABLE=1 -DEXPORT_PLATFORM_AUDIO_SMART_VOICE_ENABLE=1 -DEXPORT_PLATFORM_AUDIO_EFFECT_DEMO_ENABLE=1 -DEXPORT_PLATFORM_ICSD_ENABLE=1 -DEXPORT_LE_AUDIO_SUPPORT=0 -DEXPORT_PLATFORM_AUDIO_TDM_ENABLE=0 -DEXPORT_SOMATOSENSORY_ENABLE=1 -E -P cpu\br56\tools\isd_config_rule.c -o cpu\br56\tools\isd_config.ini" />
+<Add before="$compiler $options $includes -D__LD__ -E -P cpu\br56\tools\isd_config_rule.c -o cpu\br56\tools\isd_config.ini" />
 <Mode before="always" />
 <Add after="cpu\br56\tools\download.bat sdk" />
 <Mode after="always" />
