--- a/SDK/Makefile
+++ b/SDK/Makefile
@@ -154,6 +154,22 @@ export DEFINES := \
 	-DCONFIG_LINK_DISTURB_SCAN_ENABLE=0 \
 	-DCONFIG_UPDATA_ENABLE \
 	-DCONFIG_OTA_UPDATA_ENABLE \
+	-DEXPORT_PLATFORM_ICSD_ENABLE=1 \
+	-DEXPORT_PLATFORM_AUDIO_SMART_VOICE_ENABLE=1 \
+	-DEXPORT_PLATFORM_AUDIO_PDM_ENABLE=1 \
+	-DEXPORT_PLATFORM_AUDIO_ALINK_ENABLE=1 \
+	-DEXPORT_PLATFORM_AUDIO_TDM_ENABLE=0 \
+	-DEXPORT_PLATFORM_AUDIO_SPDIF_ENABLE=0 \
+	-DEXPORT_PLATFORM_AUDIO_FM_ENABLE=0 \
+	-DEXPORT_PLATFORM_AUDIO_WM8978_ENABLE=0 \
+	-DEXPORT_PLATFORM_AUDIO_UART_SENDER_ENABLE=1 \
+	-DEXPORT_PLATFORM_AUDIO_SPATIAL_EFFECT_ENABLE=1 \
+	-DEXPORT_PLATFORM_AUDIO_EFFECT_DEMO_ENABLE=1 \
+	-DEXPORT_SOMATOSENSORY_ENABLE=1 \
+	-DEXPORT_PLATFORM_ANC_ENABLE=1 \
+	-DEXPORT_PLATFORM_HW_MATH_VERSION=2 \
+	-DEXPORT_LE_AUDIO_SUPPORT=0 \
+	-DEXPORT_PLATFORM_AUDIO_MIDI_ENABLE=0 \
 
 
 export DEFINES += $(EXT_CFLAGS) # 额外的一些定义
