1.升级sdk到patch0403;2.打开BLE跟随TWS主从切换

--- a/SDK/.vscode/settings.json
+++ b/SDK/.vscode/settings.json
@@ -10,6 +10,9 @@
         "app_main.h": "c",
         "custom_cfg.h": "c",
         "btstack_event.h": "c",
-        "eq_config.h": "c"
+        "eq_config.h": "c",
+        "clock_manager.h": "c",
+        "board_config.h": "c",
+        "includes.h": "c"
     }
 }
