--- a/SDK/.vscode/settings.json
+++ b/SDK/.vscode/settings.json
@@ -13,6 +13,7 @@
         "eq_config.h": "c",
         "clock_manager.h": "c",
         "board_config.h": "c",
-        "includes.h": "c"
+        "includes.h": "c",
+        "gpio.h": "c"
     }
 }
