移植一部分应用逻辑，可以报心率数值。 -喇叭没有声音，不知道为啥 -心率报数值没有测试 -耳机与仓交互的地方没有找到

--- a/SDK/.vscode/settings.json
+++ b/SDK/.vscode/settings.json
@@ -14,6 +14,7 @@
         "clock_manager.h": "c",
         "board_config.h": "c",
         "includes.h": "c",
-        "gpio.h": "c"
+        "gpio.h": "c",
+        "hx3011.h": "c"
     }
 }
